Commit for at hente magnetons repostory class

--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -27,7 +27,7 @@
 
     <!--Væddemål-->
     <string name="money">Taberen giver 50 kroner til vinderen</string>
-    <string name="wedgie">Taberen få en olfert - vinderen giver</string>
+    <string name="wedgie">Taberen får en olfert - vinderen giver</string>
     <string name="shot">Taberen drikker et vodkashot</string>
     <string name="bitchSlap">Taberen får et slag med flad hånd - vinderen slår</string>
     <string name="sniff">Taberen snuser til vinderens sokker</string>
